--- a/src/workshops/shadows/shadowEditorGroup.html
+++ b/src/workshops/shadows/shadowEditorGroup.html
@@ -6,8 +6,15 @@
 
     <div id="shadowCollapse" class="collapse form-group-collapse">
         <div class="form-group">
-            <label for="shadowType">Type</label>
-            <button id="shadowType" class="btn btn-default" data-bind="text: $component.displayName, balloon: { component: { name: 'shadow-selector', params: { onSelect: $component.onShadowSelected, selectedShadow: $component.shadowKey } } }"></button>
+            <label for="shadowType">
+                Type
+            </label>
+            <div class="input-group">
+                <input id="shadowType" class="form-control" readonly data-bind="value: $component.displayName, balloon: { component: { name: 'shadow-selector', params: { onSelect: $component.onShadowSelected, selectedShadow: $component.shadowKey } } }" />
+                <span class="btn input-group-btn">
+                    <i aria-hidden="true" class="paperbits-icon paperbits-small-down"></i>
+                </span>
+            </div>
         </div>
     </div>
 </div>
