--- a/src/workshops/shadows/shadowSelector.html
+++ b/src/workshops/shadows/shadowSelector.html
@@ -2,13 +2,12 @@
     <h1>Shadow</h1>
     <hr />
 
-    <div class="list" data-bind="scrollable: true">
+    <div class="flex flex-column flex-item flex-item-grow fonts" role="list" data-bind="scrollable: true">
         <a href="#" class="list-item" title="Clear shadow" data-bind="click: $component.clearShadow, focus: true">
             <span class="list-item-label">
                 (Inherit)
             </span>
         </a>
-
         <!-- ko foreach: { data: shadows, as: 'shadow' } -->
         <a href="#" class="list-item shadow-box"
             data-bind="click: $component.selectShadow, css: { selected: shadow.key == $component.selectedShadow() }">
