--- a/src/workshops/transform/transform.html
+++ b/src/workshops/transform/transform.html
@@ -18,7 +18,7 @@
         </div>
         <div class="form-group">
             <label for="scaleX">Scale X</label>
-            <input id="scaleeX" type="number" class="form-control" placeholder="(Inherit)"
+            <input id="scaleX" type="number" class="form-control" placeholder="(Inherit)"
                 data-bind="textInput: $component.scaleX" />
         </div>
         <div class="form-group">
@@ -31,6 +31,5 @@
             <input id="rotate" type="number" class="form-control" placeholder="(Inherit)"
                 data-bind="textInput: $component.rotate" />
         </div>
-    </div>
     </div>
 </div>
