--- a/src/workshops/gradients/gradientEditor.html
+++ b/src/workshops/gradients/gradientEditor.html
@@ -2,7 +2,7 @@
     <!-- ko if: gradientViewModel() -->
     <div class="form-group form-group-collapsible">
         <label class="form-label">
-            <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#mainCollapse'"></a>
+            <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#mainCollapse'" aria-label="Toggle 'Main' section"></a>
             <b>Main</b>
         </label>
         <div id="mainCollapse" class="collapse form-group-collapse">
@@ -17,7 +17,7 @@
 
     <div class="form-group form-group-collapsible">
         <label class="form-label">
-            <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#settingsCollapse'"></a>
+            <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#settingsCollapse'" aria-label="Toggle 'Settings' section"></a>
             <b>Settings</b>
         </label>
         <div id="settingsCollapse" class="collapse form-group-collapse">
