--- a/src/workshops/shadows/shadowEditor.html
+++ b/src/workshops/shadows/shadowEditor.html
@@ -1,7 +1,7 @@
 <div class="form flex-item flex-item-grow" data-bind="scrollable: true">
     <div class="form-group form-group-collapsible">
         <label class="form-label">
-            <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#mainCollapse'"></a>
+            <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#mainCollapse'" aria-label="Toggle 'Main' section"></a>
             <b>Main</b>
         </label>
         <div id="mainCollapse" class="collapse form-group-collapse">
@@ -23,7 +23,7 @@
     <div class="form-group form-group-collapsible">
         <label class="form-label">
             <a href="#" class="form-group-toggle" title="Toggle section"
-                data-bind="collapse: '#miscellaneousCollapse'"></a>
+                data-bind="collapse: '#miscellaneousCollapse'" aria-label="Toggle 'Shadow' section"></a>
             <b>Shadow</b>
         </label>
         <div id="miscellaneousCollapse" class="collapse form-group-collapse">
