--- a/src/workshops/transform/transform.html
+++ b/src/workshops/transform/transform.html
@@ -1,6 +1,6 @@
 <div class="form-group form-group-collapsible">
     <label class="form-label">
-        <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#transformCollapse'"></a>
+        <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#transformCollapse'" aria-label="Toggle 'Transform' section"></a>
         <b>Transform</b>
         <button class="btn btn-info" type="button" data-bind="tooltip: 'Manage element transformations'"></button>
     </label>
