--- a/src/workshops/transitions/transition.html
+++ b/src/workshops/transitions/transition.html
@@ -1,6 +1,6 @@
 <div class="form-group form-group-collapsible">
     <label class="form-label">
-        <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#transitionsCollapse'"></a>
+        <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#transitionsCollapse'" aria-label="Toggle 'Transition' section"></a>
         <b>Transition</b>
     </label>
 
