--- a/src/workshops/typography/typography.html
+++ b/src/workshops/typography/typography.html
@@ -1,6 +1,6 @@
 <div class="form-group form-group-collapsible">
     <label class="form-label">
-        <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#typographyCollapse'"></a>
+        <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#typographyCollapse'" aria-label="Toggle 'Typography' section"></a>
         <b>Typography</b>
         <button class="btn btn-info" type="button" data-bind="tooltip: 'Manage text appearance'"></button>
     </label>
