--- a/src/workshops/styleEditor/styleEditor.html
+++ b/src/workshops/styleEditor/styleEditor.html
@@ -2,10 +2,10 @@
     <div class="form-group form-group-collapsible">
         <label class="form-label">
             <a href="#" class="form-group-toggle" title="Toggle section"
-                data-bind="collapse: '#miscellaneousCollapse'"></a>
+                data-bind="collapse: '#mainCollapse'" aria-label="Toggle 'Main' section"></a>
             <b>Main</b>
         </label>
-        <div id="miscellaneousCollapse" class="collapse form-group-collapse">
+        <div id="mainCollapse" class="collapse form-group-collapse">
             <div class="form-group">
                 <button class="btn btn-info" type="button" data-bind="tooltip: 'Name of the style'"></button>
                 <label for="styleName">Style name</label>
@@ -32,7 +32,7 @@
     <div class="form-group form-group-collapsible">
         <label class="form-label">
             <a href="#" class="form-group-toggle" title="Toggle section"
-                data-bind="collapse: '#backgroundCollapse'"></a>
+                data-bind="collapse: '#backgroundCollapse'" aria-label="Toggle 'Background' section"></a>
             <b>Background</b>
             <button class="btn btn-info" type="button" data-bind="tooltip: 'Manage background'"></button>
         </label>
@@ -60,7 +60,7 @@
 
         <div class="form-group form-group-collapsible">
             <label class="form-label">
-                <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#boxCollapse'"></a>
+                <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#boxCollapse'" aria-label="Toggle 'Box' section"></a>
                 <b>Box</b>
             </label>
             <div id="boxCollapse" class="collapse form-group-collapse">
