--- a/src/workshops/styleEditor/styleEditor.html
+++ b/src/workshops/styleEditor/styleEditor.html
@@ -2,12 +2,13 @@
     <div class="form-group form-group-collapsible">
         <label class="form-label">
             <a href="#" class="form-group-toggle" title="Toggle section"
-                data-bind="collapse: '#mainCollapse'" aria-label="Toggle 'Main' section"></a>
+                data-bind="collapse: '#miscellaneousCollapse'"></a>
             <b>Main</b>
         </label>
-        <div id="mainCollapse" class="collapse form-group-collapse">
+        <div id="miscellaneousCollapse" class="collapse form-group-collapse">
             <div class="form-group">
-                <button class="btn btn-info" type="button" data-bind="tooltip: 'Name of the style'"></button>
+                <button class="btn btn-info" type="button"
+                    data-bind="tooltip: 'Name of the style'"></button>
                 <label for="styleName">Style name</label>
                 <input id="styleName" type="text" class="form-control" spellcheck="false"
                     data-bind="textInput: styleName, focus: true">
@@ -28,11 +29,11 @@
 
     <!-- ko if: allowBlockStyles -->
     <!-- <gradient-editor></gradient-editor> -->
-
+    
     <div class="form-group form-group-collapsible">
         <label class="form-label">
             <a href="#" class="form-group-toggle" title="Toggle section"
-                data-bind="collapse: '#backgroundCollapse'" aria-label="Toggle 'Background' section"></a>
+                data-bind="collapse: '#backgroundCollapse'"></a>
             <b>Background</b>
             <button class="btn btn-info" type="button" data-bind="tooltip: 'Manage background'"></button>
         </label>
@@ -57,17 +58,18 @@
             <size-editor params="{ features: 'minMaxWidth,minMaxHeight', sizeConfig: elementStyleSize, onUpdate: onSizeUpdate }">
             </size-editor>
         </div>
-
-        <div class="form-group form-group-collapsible">
-            <label class="form-label">
-                <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#boxCollapse'" aria-label="Toggle 'Box' section"></a>
-                <b>Box</b>
-            </label>
-            <div id="boxCollapse" class="collapse form-group-collapse">
-                <box params="{ box: elementStyleBox, onUpdate: onBoxUpdate }"></box>
-            </div>
-        </div>
-        <!-- /ko -->
-
-        <!-- /ko -->
     </div>
+    
+    <div class="form-group form-group-collapsible">
+        <label class="form-label">
+            <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#boxCollapse'"></a>
+            <b>Box</b>
+        </label>
+        <div id="boxCollapse" class="collapse form-group-collapse">
+            <box params="{ box: elementStyleBox, onUpdate: onBoxUpdate }"></box>
+        </div>
+    </div>
+    <!-- /ko -->
+
+    <!-- /ko -->
+</div>
