--- a/src/workshops/transitions/transition.html
+++ b/src/workshops/transitions/transition.html
@@ -1,25 +1,19 @@
-<div class="form-group form-group-collapsible">
-    <label class="form-label">
-        <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#transitionsCollapse'" aria-label="Toggle 'Transition' section"></a>
-        <b>Transition</b>
-    </label>
-
-    <div id="transitionsCollapse" class="collapse form-group-collapse">
-        <div class="form-group">
-            <label for="textDecoration">Timing function</label>
-            <select id="textDecoration" class="form-control" data-bind="options: timingFunctionOptions, optionsValue: 'value', optionsText: 'text', value: $component.timingFunction"></select>
-        </div>
-
-        <!-- ko if: $component.enabled -->
-        <div class="form-group">
-            <label for="transitionsDelay">Delay (seconds)</label>
-            <input id="transitionsDelay" type="number" class="form-control" min="0" step="0.5" placeholder="e.g. 1.5" data-bind="textInput: $component.delay" />
-        </div>
-        <div class="form-group">
-            <label for="transitionsDuration">Duration (seconds)</label>
-            <input id="transitionsDuration" type="number" class="form-control" min="0" step="0.5" placeholder="e.g. 1.5" data-bind="textInput: $component.duration" />
-            <!-- <input id="transitionsDuration" type="range" min="0" step="0.5" class="form-control" data-bind="textInput: $component.duration" /> -->
-        </div>
-        <!-- /ko -->
-    </div>
+<div class="form-group">
+    <label for="textDecoration">Timing function</label>
+    <select id="textDecoration" class="form-control"
+        data-bind="options: timingFunctionOptions, optionsValue: 'value', optionsText: 'text', value: $component.timingFunction"></select>
 </div>
+
+<!-- ko if: $component.enabled -->
+<div class="form-group">
+    <label for="transitionsDelay">Delay (seconds)</label>
+    <input id="transitionsDelay" type="number" class="form-control" min="0" step="0.5" placeholder="e.g. 1.5"
+        data-bind="textInput: $component.delay" />
+</div>
+<div class="form-group">
+    <label for="transitionsDuration">Duration (seconds)</label>
+    <input id="transitionsDuration" type="number" class="form-control" min="0" step="0.5" placeholder="e.g. 1.5"
+        data-bind="textInput: $component.duration" />
+    <!-- <input id="transitionsDuration" type="range" min="0" step="0.5" class="form-control" data-bind="textInput: $component.duration" /> -->
+</div>
+<!-- /ko -->
