--- a/src/workshops/typography/typography.html
+++ b/src/workshops/typography/typography.html
@@ -1,112 +1,98 @@
-<div class="form-group form-group-collapsible">
-    <label class="form-label">
-        <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#typographyCollapse'" aria-label="Toggle 'Typography' section"></a>
-        <b>Typography</b>
-        <button class="btn btn-info" type="button" data-bind="tooltip: 'Manage text appearance'"></button>
-    </label>
-
-    <div id="typographyCollapse" class="collapse form-group-collapse">
-        <div class="form-group">
-            <label for="fontFamily">Font family</label>
-            <div class="input-group">
-                <input id="fontFamily" class="form-control" readonly
-                    data-bind="value: $component.fontName, balloon: { component: { name: 'font-selector', params: { onSelect: $component.onFontSelected } } }" />
-                <span class="btn input-group-btn">
-                    <i aria-hidden="true" class="paperbits-icon paperbits-small-down"></i>
-                </span>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label for="fontSize">Font size</label>
-            <input id="fontSize" type="number" class="form-control" placeholder="(Inherit)" min="5" max="100"
-                data-bind="textInput: $component.fontSize" />
-            <!-- input id="fontSize" type="range" class="form-control" min="5" max="100" data-bind="textInput: $component.fontSize" /-->
-        </div>
-
-        <div class="form-group">
-            <label for="lineHeight">Line height</label>
-            <input id="lineHeight" type="number" class="form-control" placeholder="(Inherit)" min="1" max="100"
-                data-bind="textInput: $component.lineHeight" />
-            <!-- <input id="lineHeight" type="range" class="form-control" min="5" max="100" data-bind="textInput: $component.lineHeight" /> -->
-        </div>
-
-        <div class="form-group">
-            <label for="letterSpacing">Letter spacing</label>
-            <input id="letterSpacing" type="number" class="form-control" placeholder="(Inherit)" min="1" max="100"
-                data-bind="textInput: $component.letterSpacing" />
-            <!-- <input id="letterSpacing" type="range" class="form-control" min="0" max="20" data-bind="textInput: $component.letterSpacing" /> -->
-        </div>
-
-        <div class="form-group">
-            <div class="toolbox-btn" title="Font weight"
-                data-bind="css: { 'toolbox-btn-is-active': fontWeight }, tooltip: currentWeight">
-                <a href="#" role="button" data-bind="click: toggleBold" aria-label="Change font weight">
-                    <i aria-hidden="true" class="paperbits-icon paperbits-bold"></i>
-                </a>
-            </div>
-            <div class="toolbox-btn" title="Font style"
-                data-bind="css: { 'toolbox-btn-is-active': fontStyle }, tooltip: currentStyle">
-                <a href="#" role="button" data-bind="click: toggleItalic" aria-label="Change font style">
-                    <i aria-hidden="true" class="paperbits-icon paperbits-italic"></i>
-                </a>
-            </div>
-            <div class="toolbox-btn" data-bind="css: { 'toolbox-btn-is-active': textAlign() == 'left' }"
-                title="Align left">
-                <a href="#" role="button" data-bind="click: alignLeft" aria-label="Align text left">
-                    <i aria-hidden="true" class="paperbits-icon paperbits-align-left-2"></i>
-                </a>
-            </div>
-            <div class="toolbox-btn" data-bind="css: { 'toolbox-btn-is-active': textAlign() == 'center' }"
-                title="Align center">
-                <a href="#" role="button" data-bind="click: alignCenter" aria-label="Align text center">
-                    <i aria-hidden="true" class="paperbits-icon paperbits-align-center"></i>
-                </a>
-            </div>
-            <div class="toolbox-btn" data-bind="css: { 'toolbox-btn-is-active': textAlign() == 'right' }"
-                title="Align right">
-                <a href="#" role="button" data-bind="click: alignRight" aria-label="Align text right">
-                    <i aria-hidden="true" class="paperbits-icon paperbits-align-right-2"></i>
-                </a>
-            </div>
-            <div class="toolbox-btn" data-bind="css: { 'toolbox-btn-is-active': textAlign() == 'justify' }"
-                title="Justify">
-                <a href="#" role="button" data-bind="click: justify" aria-label="Justify text">
-                    <i aria-hidden="true" class="paperbits-icon paperbits-align-justify"></i>
-                </a>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label for="textColor">Text color</label>
-            <button id="textColor" class="btn btn-default"
-                data-bind="text: $component.colorName, balloon: { component: { name: 'color-selector', params: { selectedColorKey: $component.colorKey, onSelect: $component.onColorSelected } } }">
-            </button>
-        </div>
-
-        <div class="form-group">
-            <label for="textShadow">
-                Text shadow
-            </label>
-            <div class="input-group">
-                <input id="textShadow" class="form-control" readonly
-                    data-bind="value: $component.shadowName, balloon: { component: { name: 'shadow-selector', params: { onSelect: $component.onShadowSelected } } }" />
-                <span class="btn input-group-btn">
-                    <i aria-hidden="true" class="paperbits-icon paperbits-small-down"></i>
-                </span>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label for="textTransform">Transformation</label>
-            <select id="textTransform" class="form-control"
-                data-bind="options: textTransformOptions, optionsValue: 'value', optionsText: 'text', value: $component.textTransform"></select>
-        </div>
-
-        <div class="form-group">
-            <label for="textDecoration">Decoration</label>
-            <select id="textDecoration" class="form-control"
-                data-bind="options: textDecorationOptions, optionsValue: 'value', optionsText: 'text', value: $component.textDecoration"></select>
-        </div>
+<div class="form-group">
+    <label for="fontFamily">Font family</label>
+    <div class="input-group">
+        <input id="fontFamily" class="form-control" readonly
+            data-bind="value: $component.fontName, balloon: { component: { name: 'font-selector', params: { onSelect: $component.onFontSelected } } }" />
+        <span class="btn input-group-btn">
+            <i aria-hidden="true" class="paperbits-icon paperbits-small-down"></i>
+        </span>
     </div>
+</div>
+
+<div class="form-group">
+    <label for="fontSize">Font size</label>
+    <input id="fontSize" type="number" class="form-control" placeholder="(Inherit)" min="5" max="100"
+        data-bind="textInput: $component.fontSize" />
+    <!-- input id="fontSize" type="range" class="form-control" min="5" max="100" data-bind="textInput: $component.fontSize" /-->
+</div>
+
+<div class="form-group">
+    <label for="lineHeight">Line height</label>
+    <input id="lineHeight" type="number" class="form-control" placeholder="(Inherit)" min="1" max="100"
+        data-bind="textInput: $component.lineHeight" />
+    <!-- <input id="lineHeight" type="range" class="form-control" min="5" max="100" data-bind="textInput: $component.lineHeight" /> -->
+</div>
+
+<div class="form-group">
+    <label for="letterSpacing">Letter spacing</label>
+    <input id="letterSpacing" type="number" class="form-control" placeholder="(Inherit)" min="1" max="100"
+        data-bind="textInput: $component.letterSpacing" />
+    <!-- <input id="letterSpacing" type="range" class="form-control" min="0" max="20" data-bind="textInput: $component.letterSpacing" /> -->
+</div>
+
+<div class="form-group">
+    <div class="toolbox-btn" title="Font weight"
+        data-bind="css: { 'toolbox-btn-is-active': fontWeight }, tooltip: currentWeight">
+        <a href="#" role="button" data-bind="click: toggleBold" aria-label="Change font weight">
+            <i aria-hidden="true" class="paperbits-icon paperbits-bold"></i>
+        </a>
+    </div>
+    <div class="toolbox-btn" title="Font style"
+        data-bind="css: { 'toolbox-btn-is-active': fontStyle }, tooltip: currentStyle">
+        <a href="#" role="button" data-bind="click: toggleItalic" aria-label="Change font style">
+            <i aria-hidden="true" class="paperbits-icon paperbits-italic"></i>
+        </a>
+    </div>
+    <div class="toolbox-btn" data-bind="css: { 'toolbox-btn-is-active': textAlign() == 'left' }" title="Align left">
+        <a href="#" role="button" data-bind="click: alignLeft" aria-label="Align text left">
+            <i aria-hidden="true" class="paperbits-icon paperbits-align-left-2"></i>
+        </a>
+    </div>
+    <div class="toolbox-btn" data-bind="css: { 'toolbox-btn-is-active': textAlign() == 'center' }" title="Align center">
+        <a href="#" role="button" data-bind="click: alignCenter" aria-label="Align text center">
+            <i aria-hidden="true" class="paperbits-icon paperbits-align-center"></i>
+        </a>
+    </div>
+    <div class="toolbox-btn" data-bind="css: { 'toolbox-btn-is-active': textAlign() == 'right' }" title="Align right">
+        <a href="#" role="button" data-bind="click: alignRight" aria-label="Align text right">
+            <i aria-hidden="true" class="paperbits-icon paperbits-align-right-2"></i>
+        </a>
+    </div>
+    <div class="toolbox-btn" data-bind="css: { 'toolbox-btn-is-active': textAlign() == 'justify' }" title="Justify">
+        <a href="#" role="button" data-bind="click: justify" aria-label="Justify text">
+            <i aria-hidden="true" class="paperbits-icon paperbits-align-justify"></i>
+        </a>
+    </div>
+</div>
+
+<div class="form-group">
+    <label for="textColor">Text color</label>
+    <button id="textColor" class="btn btn-default"
+        data-bind="text: $component.colorName, balloon: { component: { name: 'color-selector', params: { selectedColorKey: $component.colorKey, onSelect: $component.onColorSelected } } }">
+    </button>
+</div>
+
+<div class="form-group">
+    <label for="textShadow">
+        Text shadow
+    </label>
+    <div class="input-group">
+        <input id="textShadow" class="form-control" readonly
+            data-bind="value: $component.shadowName, balloon: { component: { name: 'shadow-selector', params: { onSelect: $component.onShadowSelected } } }" />
+        <span class="btn input-group-btn">
+            <i aria-hidden="true" class="paperbits-icon paperbits-small-down"></i>
+        </span>
+    </div>
+</div>
+
+<div class="form-group">
+    <label for="textTransform">Transformation</label>
+    <select id="textTransform" class="form-control"
+        data-bind="options: textTransformOptions, optionsValue: 'value', optionsText: 'text', value: $component.textTransform"></select>
+</div>
+
+<div class="form-group">
+    <label for="textDecoration">Decoration</label>
+    <select id="textDecoration" class="form-control"
+        data-bind="options: textDecorationOptions, optionsValue: 'value', optionsText: 'text', value: $component.textDecoration"></select>
 </div>
